# SatellitePoly

./: .gitignore  README.md
Source/: SatellitePoly.sln  Top50Satellites.sln
Source/SatellitePoly/: SatellitePoly.pyproj  gp.php
Source/SatellitePoly/src/: initializeargs.py  main.py  polynomials.py  satelliteutil.py  (+1 more)
Source/Top50Satellites.Common/: Top50Satellites.Common.csproj
Source/Top50Satellites.SatelliteEngine/: SatelliteEngine.py  Top50Satellites.SatelliteEngine.pyproj
Source/Top50Satellites.SatelliteEngineAdapter/: TestAdapter.cs  Top50Satellites.SatelliteEngineAdapter.csproj
Source/Top50Satellites.SatelliteEngineAdapter.Tests/: TestAdapterTests.cs  Top50Satellites.SatelliteEngineAdapter.Tests.csproj
Source/Top50Satellites.SatelliteService/: README.md  SatelliteService.py  Top50Satellites.SatelliteService.pyproj  dist.bat  pyproject.toml  setup.py
Source/Top50Satellites.SatelliteService.Console/: Top50Satellites.SatelliteService.Console.pyproj
Source/Top50Satellites.SatelliteService/modules/: initializeArgs.py  polynomials.py  printResult.py  satellite.py
Source/Top50Satellites.SatelliteService/satservice/: consoleapp.py
Source/Top50Satellites.SatelliteService/src/: consoleapp.py  initializeargs.py  main.py  polynomials.py  satelliteutil.py  writeoutput.py
Source/Top50Satellites.SatelliteService/test/: tleData.txt
Source/Top50Satellites.SatelliteServiceWrapper/: Assembly.cs  Top50Satellites.SatelliteServiceWrapper.csproj
Source/Top50Satellites.SatelliteServiceWrapper.Tests/: Top50Satellites.SatelliteServiceWrapper.Tests.csproj
(+24 files in other folders)
