[build-system]
requires = ["hatchling", "python-dateutil", "skyfield", "numpy"]
build-backend = "hatchling.build"

[project]
name = "satellite_service_Pawleshhh"
version = "0.0.1"
authors = [
  { name="Mateusz Pawlikowski", email="mateuszpawlikowski98@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/Pawleshhh/Top50Satellites"